--- a/common/common.scss
+++ b/common/common.scss
@@ -1,41 +1,6 @@
-// Theme's SCSS
-
-// Enhance user card on about page
-.about-page {
-  .about-page-user, .user-info {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1.5em;
-    
-    .user-bio-container {
-      margin-top: 0.5em;
-      padding: 0.5em 0;
-      border-top: 1px solid var(--primary-low);
-      
-      .user-bio-label {
-        font-weight: bold;
-        margin-bottom: 0.25em;
-      }
-      
-      .user-bio-content {
-        font-size: 0.9em;
-        line-height: 1.4;
-        color: var(--primary-high);
-        
-        p:last-child {
-          margin-bottom: 0;
-        }
-      }
-    }
-  }
-  
-  .about-page-user {
-    padding: 1em;
-    border: 1px solid var(--primary-low);
-    border-radius: 5px;
-    
-    &:hover {
-      background-color: var(--primary-very-low);
-    }
-  }
+.about__moderators {
+  display: none;
+}
+.username {
+  color: teal;
 }
