--- a/common/common.scss
+++ b/common/common.scss
@@ -35,9 +35,20 @@ $text-color: #555;
 // User list component styles
 .custom-about-page-users-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: $user-list-spacing;
   margin: 2em 0;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (max-width: 1024px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .custom-about-page-user {
@@ -47,6 +58,9 @@ $text-color: #555;
   align-items: center;
   gap: 1em;
   transition: transform 0.2s ease;
+  width: 100%;
+  max-width: 320px;
+  margin: 0 auto;
 
   &:hover {
     transform: translateY(-5px);
@@ -56,8 +70,8 @@ $text-color: #555;
     margin-bottom: 0.5em;
     
     img {
-      width: 120px;
-      height: 120px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
       object-fit: cover;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -69,14 +83,16 @@ $text-color: #555;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    gap: 0.5em;
+    gap: 0.4em;
+    width: 100%;
   }
 
   .username {
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-weight: 600;
     margin: 0;
-    color: $primary-color;
+    color: #000;
+    margin-bottom: -0.25em;
 
     a {
       color: inherit;
@@ -86,20 +102,38 @@ $text-color: #555;
         color: var(--primary-high);
       }
     }
+
+    .primary-name {
+      font-size: 1em;
+      line-height: 1.2;
+    }
   }
 
   .user-title {
     color: $secondary-color;
-    font-size: 1em;
+    font-size: 0.9em;
     margin: 0;
-    font-weight: 500;
+    font-weight: 700;
+    margin-top: 0;
+  }
+
+  .spacer {
+    height: 0.6em;
+  }
+
+  .secondary-name {
+    font-size: 16px;
+    color: $secondary-color;
+    font-weight: 600;
+    line-height: 1.2;
+    margin-bottom: -0.3em;
   }
 
   .user-bio {
     color: $text-color;
-    font-size: 0.95em;
-    line-height: 1.5;
-    margin: 0.5em 0;
+    font-size: 12px;
+    line-height: 1.4;
+    margin: 0.4em 0;
     max-width: 280px;
 
     p {
@@ -110,7 +144,7 @@ $text-color: #555;
   .user-social-links {
     display: flex;
     gap: 1em;
-    margin-top: 0.5em;
+    margin-top: 0.4em;
 
     .social-link {
       color: $secondary-color;
@@ -121,8 +155,8 @@ $text-color: #555;
       }
 
       .d-icon {
-        width: 1.2em;
-        height: 1.2em;
+        width: 1.1em;
+        height: 1.1em;
       }
     }
   }
@@ -136,7 +170,10 @@ $text-color: #555;
   padding: 0.6em 2em;
   border-radius: 30px;
   margin: 2em auto 0;
+  transform: translateX(25px);
   transition: all 0.2s ease;
+  display: block;
+  text-align: center;
 
   &:hover {
     background: var(--primary-very-low);
