--- a/common/common.scss
+++ b/common/common.scss
@@ -2,9 +2,9 @@
 $user-list-spacing: 2em;
 $section-margin: 3em;
 $card-padding: 1.5em;
-$primary-color: #333;
-$secondary-color: #666;
-$text-color: #555;
+$primary-color: var(--primary);
+$secondary-color: var(--secondary);
+$text-color: var(--primary);
 
 // Common styles for about page sections
 .about-page-section {
@@ -18,8 +18,10 @@ $text-color: #555;
   h3 {
     font-size: 2.5em;
     margin-bottom: 0.3em;
-    color: $primary-color;
+    color: var(--primary);
     font-weight: 600;
+    transform: translateX(25px);
+    font-family: "Inter", sans-serif;
   }
 
   p {
@@ -61,6 +63,7 @@ $text-color: #555;
   width: 100%;
   max-width: 320px;
   margin: 0 auto;
+  font-family: "Inter", sans-serif;
 
   &:hover {
     transform: translateY(-5px);
@@ -91,8 +94,9 @@ $text-color: #555;
     font-size: 1.2em;
     font-weight: 600;
     margin: 0;
-    color: #000;
+    color: var(--primary);
     margin-bottom: -0.25em;
+    font-family: "Inter", sans-serif;
 
     a {
       color: inherit;
@@ -106,15 +110,16 @@ $text-color: #555;
     .primary-name {
       font-size: 1em;
       line-height: 1.2;
+      color: var(--primary);
     }
   }
 
   .user-title {
-    color: $secondary-color;
+    color: var(--primary-medium);
     font-size: 0.9em;
     margin: 0;
     font-weight: 700;
-    margin-top: 0;
+    font-family: "Inter", sans-serif;
   }
 
   .spacer {
@@ -123,21 +128,24 @@ $text-color: #555;
 
   .secondary-name {
     font-size: 16px;
-    color: $secondary-color;
+    color: var(--primary-medium);
     font-weight: 600;
     line-height: 1.2;
     margin-bottom: -0.3em;
+    font-family: "Inter", sans-serif;
   }
 
   .user-bio {
-    color: $text-color;
+    color: var(--primary);
     font-size: 12px;
     line-height: 1.4;
     margin: 0.4em 0;
     max-width: 280px;
+    font-family: "Inter", sans-serif;
 
     p {
       margin: 0;
+      color: var(--primary);
     }
   }
 
@@ -147,7 +155,7 @@ $text-color: #555;
     margin-top: 0.4em;
 
     .social-link {
-      color: $secondary-color;
+      color: var(--tertiary-med-or-tertiary);
       transition: color 0.2s ease;
       
       &:hover {
@@ -164,8 +172,8 @@ $text-color: #555;
 
 .custom-about-page-users-list__expand-button {
   background: transparent;
-  border: 2px solid var(--primary-low);
-  color: var(--primary-high);
+  border: 2px solid var(--primary-medium);
+  color: var(--primary-medium);
   font-weight: 500;
   padding: 0.6em 2em;
   border-radius: 30px;
@@ -174,6 +182,7 @@ $text-color: #555;
   transition: all 0.2s ease;
   display: block;
   text-align: center;
+  font-family: "Inter", sans-serif;
 
   &:hover {
     background: var(--primary-very-low);
